# pytest-scrutinize

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
pytest_scrutinize/: __init__.py  data.py  io.py  mocks.py  plugin.py  plugin_xdist.py  timer.py  utils.py
tests/: conftest.py  test_plugin.py
tests/django_app/: apps.py  models.py  settings.py
tests/examples/: test_django.py  test_mock.py  test_simple.py
